--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -9,6 +9,7 @@
 @import url('./profile.css');
 @import url('./details.css');
 @import url('./footer.css');
+@import url('./page404.css');
 
 * {
     box-sizing: border-box;
