--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -2,6 +2,7 @@
 @import url('https://use.fontawesome.com/releases/v5.15.4/css/all.css');
 
 @import url('./create.css');
+@import url('./edit.css');
 @import url('./header.css');
 @import url('./login.css');
 @import url('./register.css');
