--- a/src/components/Photo/Details/Details.css
+++ b/src/components/Photo/Details/Details.css
@@ -22,3 +22,22 @@
 .none{
     display: none;
 }
+
+.thumbs-up-active {
+    color: rgb(73, 191, 76);
+    font-size: 40px;
+    margin-right: 20px;
+}
+
+.thumbs-up-inactive {
+    color: lightgrey;
+    font-size: 40px;
+    margin-right: 20px;
+    pointer-events: none;
+}
+
+.fa-thumbs-up:hover {
+    transform: scale(1.3);
+    transition: 0.3s;
+}
+
