--- a/public/styles/mainContent.css
+++ b/public/styles/mainContent.css
@@ -14,6 +14,9 @@
     box-shadow: 0px 0px 13px 3px black;
     background-color: white;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .img-card .image{
@@ -24,9 +27,12 @@
 .img-card img {
     width: 100%;
     height: auto;
+    max-height: 200px;
 }
 
-
+.img-card h3 {
+    text-align: center;
+}
 
 .img-card h3 {
     padding-left: 10px;
