--- a/src/components/User/Login/Login.css
+++ b/src/components/User/Login/Login.css
@@ -52,7 +52,7 @@
 }
 
 .login-form input {
-    margin-bottom: 0;
+    margin-bottom: 20;
 }
 
 .login-form p {
@@ -65,9 +65,26 @@
 
 .inactive {
     position: absolute;
-    top: 33px;
-    right: -120px;
+    bottom: -22px;
+    left: 10px;
     display: block;
     color: red;
    
+}
+
+.error {
+    display: block;
+    border: 2px solid #f80303;
+    padding: 20px 50px;
+    background: red;
+    color: white;
+    border-radius: 24px;
+    font-weight: 500;
+    position: absolute;
+    top: -35px;
+    box-shadow: 0px 0px 8px black;
+}
+
+.error p {
+    margin: 0;
 }
