--- a/src/components/User/Register/Register.css
+++ b/src/components/User/Register/Register.css
@@ -1,4 +1,79 @@
-.input-inactive {
+
+.username-register, .password-register, .repass-register{
+    position: relative;
+}
+
+
+
+.register i {
+    position: absolute;
+    left: -30px;
+    top: 35px;
+    font-size: 20px;
+}
+
+.user-inactive {
+    color: lightgrey;
+}
+
+.password-inactive {
+    color: lightgrey;
+}
+
+.repass-inactive {
+    color: lightgrey;
+}
+
+.user-fail, .pass-fail, .repass-fail {
+    color:red;
+    display: block;
+}
+
+.user-ok, .pass-ok, .repass-ok {
+    color: rgb(73, 191, 76);
+    display: block;
+}
+
+.hidden {
+    display: none;
+}
+
+.username-register p, .password-register p, .repass-register p{
+    margin-top: 0;
+    position: absolute;
+    bottom: -22px;
+    left: 10px;
+}
+
+.password-register p, .repass-register p{
+      margin-top: 0;
+    position: absolute;
+    bottom: -22px;
+    left: 10px;  
+}
+
+.match-err-shown {
+    display: block;
+    color: red;
+    z-index: 2;
+}
+
+.register .error {
+    display: block;
+    border: 2px solid #f80303;
+    padding: 10px 50px;
+    background: red;
+    color: white;
+    border-radius: 24px;
+    font-weight: 500;
+    position: absolute;
+    top: -35px;
+    box-shadow: 0px 0px 8px black;
+    
+}
+
+/* -------------------------------------------- */
+/* .input-inactive {
     position: absolute;
     left: -30px;
     top: 35px;
@@ -35,4 +110,4 @@
     top: 35px;
     color: lightgrey;
     font-size: 20px;
-}
+} */
