--- a/src/components/Photo/Details/Details.css
+++ b/src/components/Photo/Details/Details.css
@@ -41,3 +41,8 @@
     transition: 0.3s;
 }
 
+
+
+/* .react-confirm-alert-body{
+    background:linear-gradient(0deg, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url('../images/background.png');
+} */
