--- a/public/styles/mainContent.css
+++ b/public/styles/mainContent.css
@@ -80,41 +80,41 @@
     text-transform: uppercase;
 }
 
-.top-commented {
+.top-liked {
     position: relative;
     margin-top: 100px;
     z-index: 3;
 }
 
-.top-commented-img {
+.top-liked-img {
     width: 300px;
 }
 
-.top-commented-img {
+.top-liked-img {
     width: 100%;
     height: auto;
     box-shadow: 0px 0px 13px 10px rgb(73, 191, 76);
     transition: 0.4s;
 }
 
-.top-commented .top-img {
+.top-liked .top-img {
     width: 100%;
 }
 
-.top-commented img {
+.top-liked img {
     width: 100%;
 }
 
-.top-commented h3 {
+.top-liked h3 {
     margin: 0;
     padding: 10px;
 }
 
-.top-commented-img:hover{
+.top-liked-img:hover{
     transform: scale(1.1);
 }
 
-.top-commented a {
+.top-liked a {
     text-decoration: none;
     color: rgb(71, 71, 71);
 }
